--- a/src/Card/card.css
+++ b/src/Card/card.css
@@ -15,6 +15,8 @@
     border-radius: 5px;
     border: solid black 1px;
     box-shadow: 2px 2px 0 0 rgba(0, 0, 0, .4);
+    position: relative;
+    padding-bottom: 10px;
 }
 
 .topline {
@@ -22,6 +24,13 @@
     margin-left: 0px;
     /* background-color: aliceblue; */
     text-align: left;
+}
+
+.botline {
+    width: 100%;
+    position: absolute;
+    bottom: 10px;
+    height: 10px;
 }
 
 /* .suit:hover {
