--- a/src/Card/card.css
+++ b/src/Card/card.css
@@ -22,7 +22,6 @@
 .topline {
     width: calc(100% + 6px);
     margin-left: 0px;
-    /* background-color: aliceblue; */
     text-align: left;
 }
 
@@ -33,12 +32,6 @@
     height: 10px;
 }
 
-/* .suit:hover {
-    animation-name: growsuit;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
-} */
-
 .card:hover {
     animation-name: growcard;
     animation-duration: 1s;
@@ -46,41 +39,11 @@
 
 }
 
-/* .suit:not(:hover) {
-    animation-name: ungrowsuit;
-    animation-duration: 1s;
-
-} */
-
 .card:not(:hover) {
     animation-name: ungrowcard;
     animation-duration: 1s;
 
 }
-
-/* @keyframes growsuit {
-    from {
-        height: 50px;
-        width: 50px;
-    }
-
-    to {
-        width: 60px;
-        height: 60px;
-    }
-}
-
-@keyframes ungrowsuit {
-    from {
-        height: 60px;
-        width: 60px;
-    }
-
-    to {
-        width: 50px;
-        height: 50px;
-    }
-} */
 
 @keyframes growcard {
     from {
@@ -103,5 +66,57 @@
     to {
         height: 100px;
         width: 50px;
+    }
+}
+
+
+.decideBar {
+    background-color: green;
+    height: 250px;
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 25px;
+    border-radius: 12px;
+    box-shadow: 0 0 12px 12px rgb(107, 126, 107);
+
+}
+
+.options {
+    display: flex;
+    margin-top: 48px;
+    margin-bottom: 24px;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.decisionButton {
+    border-radius: 12px;
+    padding: 5px;
+    box-shadow: 2px 2px 0 0 black;
+    position: relative;
+}
+
+.decisionButton:hover {
+    animation-name: buttonshadow;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+
+}
+
+@keyframes buttonshadow {
+    from {
+        box-shadow: 2px 2px 0 0 black;
+        top: 0px;
+        left: 0px;
+
+    }
+
+    to {
+        box-shadow: 0px 0px 0 0 black;
+        top: 2px;
+        left: 2px;
     }
 }
