--- a/src/Card/card.css
+++ b/src/Card/card.css
@@ -71,7 +71,8 @@
 
 
 .decideBar {
-    background-color: green;
+    background: rgb(0, 128, 0);
+    background: radial-gradient(circle, rgba(0, 128, 0, 1) 0%, rgba(0, 128, 0, 0.5494572829131652) 100%);
     height: 250px;
     width: 250px;
     display: flex;
@@ -79,7 +80,7 @@
     align-items: center;
     padding: 25px;
     border-radius: 12px;
-    box-shadow: 0 0 12px 12px rgb(107, 126, 107);
+    box-shadow: 0 0 12px 12px rgba(107, 126, 107, .5);
 
 }
 
@@ -94,13 +95,16 @@
 .decisionButton {
     border-radius: 12px;
     padding: 5px;
-    box-shadow: 2px 2px 0 0 black;
+    box-shadow: 2px 2px 0 0 rgba(0, 0, 0, .4);
     position: relative;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(234, 234, 234);
+    font-weight: bold;
 }
 
 .decisionButton:hover {
     animation-name: buttonshadow;
-    animation-duration: 1s;
+    animation-duration: .5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
 
@@ -108,14 +112,14 @@
 
 @keyframes buttonshadow {
     from {
-        box-shadow: 2px 2px 0 0 black;
+        box-shadow: 2px 2px 0 0 rgba(0, 0, 0, .4);
         top: 0px;
         left: 0px;
 
     }
 
     to {
-        box-shadow: 0px 0px 0 0 black;
+        box-shadow: 0px 0px 0 0 rgba(0, 0, 0, .4);
         top: 2px;
         left: 2px;
     }
