--- a/src/Deck/deck.css
+++ b/src/Deck/deck.css
@@ -3,9 +3,14 @@
     width: 270px;
     display: flex;
     flex-wrap: wrap;
-    height: 100%;
+    height: 100vh;
     max-height: 100vh;
     overflow-y: scroll;
+    position: absolute;
+    right: 0px;
+    border-left: solid rgba(0, 0, 0, .2) 1px;
+    background-color: darkgreen;
+    top: 0px;
 }
 
 /* width */
