--- a/src/YourHand/yourhand.css
+++ b/src/YourHand/yourhand.css
@@ -1,7 +1,7 @@
 .yourhand {
     display: flex;
     background-color: rgb(0, 100, 0, .8);
-    width: 100%;
+    width: calc(100% - 270px);
     /* align-items: center; */
     justify-content: center;
     padding: 25px;
@@ -9,7 +9,7 @@
     border-bottom: solid rgba(0, 0, 0, .5) 1px;
     position: absolute;
     bottom: 0px;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 .yourcount {
