--- a/src/Playing Area/playingarea.css
+++ b/src/Playing Area/playingarea.css
@@ -6,3 +6,52 @@
     padding-right: 270px;
     height: 100%;
 }
+
+.resetdiv {
+    display: flex;
+    width: 100%;
+    padding-left: 50px;
+    padding-top: 25px;
+    /* background-color: aliceblue; */
+}
+
+
+.resetbutton {
+    border-radius: 12px;
+    padding: 5px;
+    box-shadow: 2px 2px 0 0 rgba(0, 0, 0, .4);
+    position: relative;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(234, 234, 234);
+    font-weight: bold;
+}
+
+.resetbutton:hover {
+    animation-name: buttonshadow;
+    animation-duration: .5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+
+}
+
+@keyframes buttonshadow {
+    from {
+        box-shadow: 2px 2px 0 0 rgba(0, 0, 0, .4);
+        top: 0px;
+        left: 0px;
+
+    }
+
+    to {
+        box-shadow: 0px 0px 0 0 rgba(0, 0, 0, .4);
+        top: 2px;
+        left: 2px;
+    }
+}
+
+.resetinput {
+    width: 35px;
+    text-align: center;
+    padding: 0px;
+    border-radius: 10px;
+}
