--- a/src/YourHand/yourhand.css
+++ b/src/YourHand/yourhand.css
@@ -5,6 +5,7 @@
     /* align-items: center; */
     justify-content: center;
     padding: 25px;
+    padding-top: 50px;
     border-top: solid rgba(0, 0, 0, .5) 1px;
     border-bottom: solid rgba(0, 0, 0, .5) 1px;
     position: absolute;
@@ -17,4 +18,21 @@
     top: 0px;
     height: 25px;
     font-weight: bold;
+    font-size: large;
+
+}
+
+.youroddsofbusting {
+    position: absolute;
+    top: 25px;
+    height: 25px;
+    font-weight: bolder;
+    font-size: large;
+    color: rgb(0, 0, 0);
+    text-shadow:
+        1px 1px 0 #f80000,
+        -1px 1px 0 #f80000,
+        -1px -1px 0 #f80000,
+        1px -1px 0 #f80000;
+    /* background-color: rgb(0, 100, 0, 1); */
 }
