--- a/src/YourHand/yourhand.css
+++ b/src/YourHand/yourhand.css
@@ -5,7 +5,7 @@
     /* align-items: center; */
     justify-content: center;
     padding: 25px;
-    padding-top: 50px;
+    padding-top: 100px;
     border-top: solid rgba(0, 0, 0, .5) 1px;
     border-bottom: solid rgba(0, 0, 0, .5) 1px;
     position: absolute;
@@ -15,7 +15,7 @@
 
 .yourcount {
     position: absolute;
-    top: 0px;
+    top: 50px;
     height: 25px;
     font-weight: bold;
     font-size: large;
@@ -24,7 +24,7 @@
 
 .youroddsofbusting {
     position: absolute;
-    top: 25px;
+    top: 75px;
     height: 25px;
     font-weight: bolder;
     font-size: large;
@@ -35,4 +35,16 @@
         -1px -1px 0 #f80000,
         1px -1px 0 #f80000;
     /* background-color: rgb(0, 100, 0, 1); */
+}
+
+.clearboard {
+    border-radius: 12px;
+    padding: 5px;
+    box-shadow: 2px 2px 0 0 rgba(0, 0, 0, .4);
+    position: absolute;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: rgb(234, 234, 234);
+    font-weight: bold;
+    top: 15px;
+
 }
