--- a/src/Card/card.css
+++ b/src/Card/card.css
@@ -100,6 +100,9 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(234, 234, 234);
     font-weight: bold;
+    font-family: Quicksand;
+    font-size: 16px;
+
 }
 
 .decisionButton:hover {
