--- a/src/SideBets/sidebets.css
+++ b/src/SideBets/sidebets.css
@@ -27,7 +27,7 @@
     width: 100%;
     font-size: 16px;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Quicksand;
     margin-top: 5px;
 
 }
