--- a/src/YourHand/yourhand.css
+++ b/src/YourHand/yourhand.css
@@ -19,6 +19,7 @@
     height: 25px;
     font-weight: bold;
     font-size: large;
+    font-family: Quicksand;
 
 }
 
@@ -42,9 +43,10 @@
     padding: 5px;
     box-shadow: 2px 2px 0 0 rgba(0, 0, 0, .4);
     position: absolute;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: rgb(234, 234, 234);
     font-weight: bold;
     top: 15px;
+    font-family: Quicksand;
+
 
 }
