--- a/src/Card/card.css
+++ b/src/Card/card.css
@@ -30,6 +30,9 @@
     position: absolute;
     bottom: 10px;
     height: 10px;
+    font-family: "Fjalla One";
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .card:hover {
