--- a/src/Playing Area/playingarea.css
+++ b/src/Playing Area/playingarea.css
@@ -24,9 +24,10 @@
     padding: 5px;
     box-shadow: 2px 2px 0 0 rgba(0, 0, 0, .4);
     position: relative;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Quicksand";
     background-color: rgb(234, 234, 234);
-    font-weight: bold;
+    font-weight: bolder;
+    font-size: 16px;
 }
 
 .resetbutton:hover {
