--- a/src/Playing Area/playingarea.css
+++ b/src/Playing Area/playingarea.css
@@ -4,7 +4,14 @@
     align-items: center;
     position: relative;
     padding-right: 270px;
-    height: 100%;
+    max-height: 100%;
+    min-height: 500px;
+}
+
+@media screen and (max-width: 500px) {
+    .playingarea {
+        padding-right: 80px;
+    }
 }
 
 .resetdiv {
