--- a/src/Card/card.css
+++ b/src/Card/card.css
@@ -76,23 +76,28 @@
 .decideBar {
     background: rgb(0, 128, 0);
     background: radial-gradient(circle, rgba(0, 128, 0, 1) 0%, rgba(0, 128, 0, 0.5494572829131652) 100%);
-    height: 250px;
-    width: 250px;
+    /* height: 250px;
+    width: 250px; */
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 25px;
     border-radius: 12px;
     box-shadow: 0 0 12px 12px rgba(107, 126, 107, .5);
-
+    height: calc(100% - 50px);
+    width: 100%;
+    text-align: center;
 }
 
 .options {
     display: flex;
-    margin-top: 48px;
-    margin-bottom: 24px;
+    /* margin-top: 48px; */
+    /* margin-bottom: 24px; */
     width: 100%;
-    justify-content: space-around;
+    justify-content: center;
+    /* align-items: center; */
+    flex-direction: column;
+    position: absolute;
 }
 
 .decisionButton {
@@ -101,11 +106,15 @@
     box-shadow: 2px 2px 0 0 rgba(0, 0, 0, .4);
     position: relative;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: rgb(234, 234, 234);
+    background-color: rgba(234, 234, 234, .5);
     font-weight: bold;
     font-family: Quicksand;
     font-size: 16px;
-
+    height: 32vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 115px;
 }
 
 .decisionButton:hover {
