--- a/src/Playing Area/playingarea.css
+++ b/src/Playing Area/playingarea.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* justify-content: center; */
     position: relative;
     padding-right: 270px;
     max-height: 100%;
     min-height: 500px;
+    height: 100%;
 }
 
 @media screen and (max-width: 500px) {
